fixed icon making bundle size too big

--- a/src/pages/scss/article.scss
+++ b/src/pages/scss/article.scss
@@ -1,4 +1,8 @@
 #return-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 23px;
     position: fixed;
     top: 10px;
     left: 10px;
