--- a/src/pages/scss/main.scss
+++ b/src/pages/scss/main.scss
@@ -7,6 +7,10 @@
 }
 
 #github-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 23px;
     position: fixed;
     top: 10px;
     right: 10px;
